--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,3 +46,10 @@ body {
   background-repeat: no-repeat;
   background-size: cover; /* Adjust this based on your needs */
 }
+
+.custom-chat-field {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  bottom: 59px;
+}
