--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,3 +69,26 @@ body {
 .custom-windo-height-text {
   height: 240px;
 }
+
+.loading {
+  animation: loading 1s ease-out infinite alternate;
+  background: linear-gradient(to right, #5c1e1e, #29295c);
+  background-size: 200% 100%;
+}
+
+.loadingbig {
+  animation: loading 1s ease-out infinite alternate;
+  background: linear-gradient(to right, #5c1e1e, #29295c);
+  background-size: 200% 100%;
+}
+
+@keyframes loading {
+  0% {
+    background-position: 0 0;
+    opacity: 50%;
+  }
+  100% {
+    background-position: 100% 0;
+    opacity: 80%;
+  }
+}
