--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,7 +29,7 @@ body {
 .slide-item {
   margin-left: 0;
   flex-shrink: 0;
-  animation: slideAnimation 14s linear infinite alternate;
+  animation: slideAnimation 20s linear infinite alternate;
 }
 
 @keyframes slideAnimation {
@@ -91,4 +91,55 @@ body {
     background-position: 100% 0;
     opacity: 80%;
   }
+}
+
+@keyframes bounce {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+
+.animate-delay-100 {
+  animation-delay: 100ms;
+}
+
+.animate-delay-200 {
+  animation-delay: 200ms;
+}
+
+.animate-delay-300 {
+  animation-delay: 300ms;
+}
+
+.animate-delay-400 {
+  animation-delay: 400ms;
+}
+
+.dot {
+  width: 10px;
+  height: 10px;
+  background-color: #000;
+  border-radius: 50%;
+  margin: 0 5px;
+  animation: bounce 0.5s infinite cubic-bezier(0.8, 0.1, 0.2, 0.9);
+}
+
+.dot:nth-child(2) {
+  animation-delay: 100ms;
+}
+
+.dot:nth-child(3) {
+  animation-delay: 200ms;
+}
+
+.dot:nth-child(4) {
+  animation-delay: 300ms;
+}
+
+.dot:nth-child(5) {
+  animation-delay: 400ms;
 }
